--- a/readme
+++ b/readme
@@ -1,53 +1,196 @@
-Idée : 1) Point légal important (à lire avant de coder)
+Pokémon Fan-Made - Cahier des Charges
+Introduction
 
-N’utilise pas les noms, designs, sprites, musiques ou assets officiels Pokémon (Nintendo / Game Freak / Creatures) sans autorisation : c’est du contenu protégé par droits d’auteur. Même pour un projet non commercial, tu prends un risque.
+Ce projet a pour but de créer une version fan-made d'un jeu Pokémon en utilisant le framework Symfony avec Symfony UX (Turbo, Live Components, etc.). Le jeu se déroule dans un environnement textuel et graphique inspiré des classiques jeux Pokémon, avec des éléments de gameplay comme l'exploration, le combat, la capture de Pokémon et la gestion de l'inventaire.
 
-Solutions sûres :
+Objectifs
 
-Créer des créatures originales « inspirées » (design et noms originaux).
+L'objectif est de recréer l'expérience d'un jeu Pokémon classique en ligne, tout en utilisant les outils modernes de développement web comme Symfony UX pour une interactivité fluide.
 
-Utiliser des sprites/illustrations sous licence libre ou achetées (ex : assets pixel art vendus sur des marketplaces) ou créées par toi/membres de ton équipe.
+Fonctionnalités
+1. Exploration de la carte
 
-Obtenir la permission explicite de l’auteur d’un asset fan-made si tu veux l’utiliser.
+Description : Le joueur peut explorer une région de Pokémon en se déplaçant entre différentes villes, routes, et autres lieux.
 
-Dans l’UI/communication, évite d’utiliser le mot “Pokémon” de façon à laisser croire que c’est un produit officiel. Tu peux dire « inspiré par les RPG de monstres ».
+Fonctionnalités associées :
 
-2) Architecture technique (haut niveau)
+Carte interactive avec des points d'intérêt (Villes, Routes, Forêts).
 
-Backend : Symfony (API-first). Utilise Doctrine pour les entités et API Platform ou tes propres controllers pour exposer l’API JSON.
+Chaque point d'intérêt peut être une ville, un lieu de rencontre de Pokémon sauvage, ou un élément interactif comme un PNJ ou une arène.
 
-Frontend : HTML/CSS/JS + un framework de jeu JS pour mobile (recommandé : Phaser pour 2D / mobile-friendly). Pour une interface site classique, Vue/React ou Stimulus + Twig.
+Lorsque le joueur clique sur un lieu, un Turbo Frame permet de charger le contenu associé sans recharger la page.
 
-Temps réel / combats multijoueur : WebSockets (Ratchet) ou Mercure (plus simple à intégrer avec Symfony) pour les combats en temps réel et notifications d’enquête.
+2. Système de combat
 
-Stockage : MySQL/Postgres pour données persistantes (joueurs, créatures, enquêtes, preuves). S3-compatible pour assets.
+Description : Le joueur rencontre des Pokémon sauvages ou combat avec d’autres dresseurs.
 
-Auth : JWT pour API mobile + sessions côté web. RBAC pour modération/admin.
+Fonctionnalités associées :
 
-Déploiement : Docker + CI (GitHub Actions / GitLab CI) + hébergement (Railway, DigitalOcean, AWS).
+Combat au tour par tour : Le joueur et le Pokémon sauvage ou d'un autre dresseur s'affrontent.
 
-3) Systèmes de jeu — idées et mécaniques
-a) TeamVilanous (organisations criminelles)
+Le joueur peut choisir des attaques ou changer de Pokémon en fonction de la situation.
 
-Chaque team a :
+Stats des Pokémon : Chaque Pokémon possède des caractéristiques (HP, Attaque, Défense, Niveau, etc.) qui influent sur le combat.
 
-name, credo (texte), philosophie (ex : « ordre par chaos », « survie du plus fort »), color_theme, bonus_passif (modificateur gameplay).
-Exemples de credo : “La force prime”, “Libérer les créatures de la loi”, “Saccager pour prospérer”.
+Live Components sont utilisés pour mettre à jour l'état du combat en temps réel, sans rechargement de page.
 
-b) Vol de créatures (mécanique)
+Animations de combat avec des effets visuels (par exemple, impact des attaques, changement de Pokémon).
 
-Vol = tentative : probabilité de succès dépend du niveau du voleur, niveau de la créature, outils (grenades de sommeil, dispositifs), environnement.
+3. Capture de Pokémon
 
-Conséquences : échec = alerte → enquête + risque de réputation. Succès = objet volé + créature capturée.
+Description : Le joueur peut capturer des Pokémon sauvages pendant son exploration.
 
-Système anti-abus : cooldowns, limites de vols par journée, pertes réputation pour maintenir un jeu équilibré.
+Fonctionnalités associées :
 
-c) Combats (tour-par-tour conseillé pour mobile)
+Lorsque le joueur rencontre un Pokémon sauvage, un bouton lui permet de lancer une Pokéball.
 
-Chaque créature a HP, attack, defense, speed, types, skills[].
+Le succès ou l’échec de la capture dépend d’une probabilité calculée en fonction de l’état du Pokémon.
 
-Tour-par-tour : ordre par speed. Compétences avec effets (dégâts, statut, buffs/debuffs).
+Animations de capture avec des effets visuels montrant la Pokéball en action.
 
-Types & efficacités : table de modificateurs (x2, x0.5, etc.).
+Si le Pokémon est capturé, il est ajouté à l’équipe du joueur.
 
-Calcul de dégâts (exemple simple) :
+4. Gestion de l’équipe Pokémon
+
+Description : Le joueur peut gérer son équipe de Pokémon capturés.
+
+Fonctionnalités associées :
+
+Une page d’inventaire pour afficher les Pokémon capturés et leurs caractéristiques.
+
+Le joueur peut choisir un Pokémon actif à utiliser dans les combats ou les remplacer.
+
+Interface d'inventaire permettant de visualiser les objets (Pokéballs, potions, etc.).
+
+5. Système d’inventaire
+
+Description : Le joueur dispose d'un inventaire pour gérer ses objets et ses Pokémon.
+
+Fonctionnalités associées :
+
+Pokéballs : Le joueur peut utiliser des Pokéballs pour capturer des Pokémon.
+
+Objets spéciaux : Potions, objets pour augmenter les stats des Pokémon, etc.
+
+Le joueur peut utiliser les objets pendant les combats ou en dehors, par exemple pour soigner un Pokémon.
+
+6. Système de progression
+
+Description : Le joueur progresse dans l’histoire en accomplissant des défis et en gagnant des combats.
+
+Fonctionnalités associées :
+
+Les Pokémon gagnent des XP après chaque combat, ce qui leur permet de monter de niveau.
+
+Lorsqu’un Pokémon atteint un certain niveau, il évolue en une forme plus puissante.
+
+Des objectifs et missions secondaires peuvent être ajoutés pour rendre le jeu plus dynamique.
+
+Technologies
+Backend
+
+Symfony 6.x : Framework PHP pour gérer la logique métier du jeu.
+
+Symfony UX : Utilisation de Turbo et Live Components pour gérer les interactions en temps réel et les mises à jour sans rechargement de page.
+
+Twig : Moteur de templates pour rendre les vues HTML.
+
+Frontend
+
+CSS (SCSS) : Pour le style de l'interface utilisateur.
+
+JavaScript (optionnel) : Pour les animations avancées (par exemple, animations de combat ou de capture). Des librairies comme Anime.js ou GSAP pourraient être utilisées pour cela.
+
+Base de données
+
+Doctrine ORM : Pour la gestion des données du jeu (utilisateurs, Pokémon, inventaire, combats, etc.).
+
+Structure du projet
+Répertoires principaux
+
+/src/Controller : Contient les contrôleurs principaux du jeu.
+
+PokemonController.php : Gestion des interactions de la carte, capture, et détails des Pokémon.
+
+CombatController.php : Gestion des combats, attaques, et évolutions.
+
+InventaireController.php : Gestion de l’inventaire et de l’équipe Pokémon.
+
+/templates : Contient les vues Twig.
+
+pokemon/ : Vues pour la carte, l’exploration et les détails des Pokémon.
+
+combat/ : Vues pour les combats (combat en temps réel, animations, résultats).
+
+inventaire/ : Vues pour la gestion de l’inventaire et des objets.
+
+/assets : Contient les fichiers CSS et JavaScript pour le frontend.
+
+/js : Scripts pour l’animation et l'interaction avancée (par exemple, les animations de capture, combats).
+
+/css : Fichiers de style (structure de la carte, des pages de combat, etc.).
+
+Fonctionnalités par page
+
+Page d’accueil :
+
+Vue de la carte de la région avec des liens vers les villes et autres lieux.
+
+Possibilité de démarrer l’aventure et de choisir un Pokémon de départ.
+
+Page de combat :
+
+Affichage des Pokémon en combat, avec des boutons pour choisir les actions (attaque, changer de Pokémon, utiliser un objet).
+
+Mise à jour en temps réel des stats (PV, attaque, etc.) grâce aux Live Components.
+
+Page de capture :
+
+Lorsque le joueur rencontre un Pokémon sauvage, possibilité de lancer une Pokéball avec une animation.
+
+Affichage du résultat de la capture (réussite/échec).
+
+Page d’inventaire :
+
+Affichage des Pokémon capturés et de leur niveau.
+
+Gestion des objets (Pokéballs, potions, objets de guérison).
+
+Page de progression :
+
+Affichage du niveau du joueur, des Pokémon, et de la progression vers la prochaine arène ou défi.
+
+Roadmap
+Phase 1 - Mise en place des bases
+
+Installation de Symfony et configuration du projet.
+
+Création des entités de base (Pokémon, Combat, Inventaire).
+
+Mise en place de la carte avec les points d’intérêt (villes, routes).
+
+Phase 2 - Combat et capture
+
+Implémentation du système de combat (tour par tour, choix des attaques).
+
+Création de l’animation de capture de Pokémon avec des probabilités de réussite.
+
+Mise en place du système d’expérience et de montée de niveau des Pokémon.
+
+Phase 3 - Inventaire et gestion des objets
+
+Implémentation de l’inventaire (Pokéballs, potions, objets).
+
+Création de l’interface pour gérer les Pokémon et les objets.
+
+Phase 4 - Système de progression
+
+Mise en place de la progression de l’histoire et des défis.
+
+Intégration des arènes et des combats contre d’autres dresseurs.
+
+Phase 5 - Finitions
+
+Tests et ajustements des animations.
+
+Ajout de l’interface pour gérer les paramètres de jeu et les préférences.
